[workspace]
resolver = "2"

members = [
    "primitives",
    "crate/aggregator",
    "crate/clique",
    "crate/rate-limiter",
    "crate/finality-aleph",
    "bin/node",
    "bin/runtime",
    "bin/chain-bootstrapper",
    "bin/client-runtime-api",
    "pallets/aleph",
    "pallets/aleph-runtime-api",
    "pallets/elections",
    "pallets/committee-management",
    "pallets/operations",
    "pallets/dynamic-evm-base-fee",
    "pallets/unified-accounts",
    "pallets/xvm",
    "pallets/ethereum-checked",
]

exclude = [
    "crate/selendra-client",
    "crate/finalizer",
    "crate/fork-off",
    "crate/unified-accounts-cli",
	"vendors/polkadot-sdk"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.package]
authors = ["Selendra"]
edition = "2021"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/selendra"
license = "Apache-2.0"

[workspace.lints.rust]
# Minimal set to satisfy polkadot-sdk crates inheriting lints from the workspace.
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }

[workspace.dependencies]
aleph-bft-crypto = { version = "0.9" }
aleph-bft-mock = { version = "0.15" }
# Pin to version that doesn't require edition2024
ws_stream_wasm = { version = "=0.7.4" }
aleph-bft-rmc = { version = "0.14" }
aleph-bft-types = { version = "0.14" }
async-trait = { version = "0.1" }
array-bytes = { version = "6" }
assert_matches = "1.3.0"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
bytes = { version = "1.8" }
clap = { version = "4.5", features = ["derive", "deprecated"] }
const-hex = { version = "1.14", default-features = false, features = ["alloc"] }
derive_more = { version = "1.0", features = ["from", "into", "as_ref", "display"] }
environmental = { version = "1.1.4", default-features = false }
env_logger = { version = "0.10" }
futures = { version = "0.3" }
futures-timer = { version = "3.0" }
hash-db = { version = "0.16", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3" }
impl-serde = { version = "0.5.0", default-features = false }
impl-trait-for-tuples = { version = "0.2.3" }
ink = { version = "5.0.0-rc", default-features = false }
ip_network = { version = "0.4" }
jsonrpsee = { version = "0.24.3" }
libp2p = { version = "0.52.4" }
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4", default-features = false }
lru = { version = "0.10" }
num_enum = { version = "0.7.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
parity-db = { version = "0.4.13" }
parity-scale-codec = { version = "3.6.1", default-features = false }
parking_lot = { version = "0.12" }
paste = { version = "1.0" }
rand = { version = "0.8.5", default-features = false }
rlp = { version = "0.6", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
similar-asserts = { version = "1.6.1" }
smallvec = { version = "1", default-features = false }
sqlx = { version = "0.7.4", default-features = false, features = ["macros"] }
static_assertions = { version = "1.1" }
thiserror = { version = "1.0" }
tiny-bip39 = { version = "1.0" }
tokio = { version = "1.41" }
rand_pcg = { version = "0.3.1", default-features = false }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

ethers = { version = "2.0.9", default-features = false }
evm = { git = "https://github.com/rust-ethereum/evm", rev = "e81732d6bb47e3d3d68d233e43919c4522598361", default-features = false }
evm-gasometer = { git = "https://github.com/rust-ethereum/evm", rev = "e81732d6bb47e3d3d68d233e43919c4522598361", default-features = false }
evm-runtime = { git = "https://github.com/rust-ethereum/evm", rev = "e81732d6bb47e3d3d68d233e43919c4522598361", default-features = false }
ethereum-types = { version = "0.15", default-features = false }
ethereum = { git = "https://github.com/rust-ethereum/ethereum", rev = "3be0d8fd4c2ad1ba216b69ef65b9382612efc8ba", default-features = false }
kvdb-rocksdb = { version = "0.19.0" }

frame-benchmarking = { path = "vendors/polkadot-sdk/substrate/frame/benchmarking", default-features = false }
frame-benchmarking-cli = { path = "vendors/polkadot-sdk/substrate/utils/frame/benchmarking-cli", default-features = false }
frame-election-provider-support = { path = "vendors/polkadot-sdk/substrate/frame/election-provider-support", default-features = false }
frame-executive = { path = "vendors/polkadot-sdk/substrate/frame/executive", default-features = false }
frame-support = { path = "vendors/polkadot-sdk/substrate/frame/support", default-features = false }
frame-system = { path = "vendors/polkadot-sdk/substrate/frame/system", default-features = false }
frame-system-rpc-runtime-api = { path = "vendors/polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { path = "vendors/polkadot-sdk/substrate/frame/try-runtime", default-features = false }

pallet-aura = { path = "vendors/polkadot-sdk/substrate/frame/aura", default-features = false }
pallet-authorship = { path = "vendors/polkadot-sdk/substrate/frame/authorship", default-features = false }
pallet-balances = { path = "vendors/polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-collective = { path = "vendors/polkadot-sdk/substrate/frame/collective", default-features = false }
pallet-contracts = { path = "vendors/polkadot-sdk/substrate/frame/contracts", default-features = false }
pallet-contracts-uapi = { path = "vendors/polkadot-sdk/substrate/frame/contracts/uapi", default-features = false }
pallet-democracy = { path = "vendors/polkadot-sdk/substrate/frame/democracy", default-features = false }
pallet-elections-phragmen = { path = "vendors/polkadot-sdk/substrate/frame/elections-phragmen", default-features = false }
pallet-identity = { path = "vendors/polkadot-sdk/substrate/frame/identity", default-features = false }
pallet-multisig = { path = "vendors/polkadot-sdk/substrate/frame/multisig", default-features = false }
pallet-preimage = { path = "vendors/polkadot-sdk/substrate/frame/preimage", default-features = false }
pallet-nomination-pools = { path = "vendors/polkadot-sdk/substrate/frame/nomination-pools", default-features = false }
pallet-nomination-pools-runtime-api = { path = "vendors/polkadot-sdk/substrate/frame/nomination-pools/runtime-api", default-features = false }
pallet-scheduler = { path = "vendors/polkadot-sdk/substrate/frame/scheduler", default-features = false }
pallet-session = { path = "vendors/polkadot-sdk/substrate/frame/session", default-features = false }
pallet-staking = { path = "vendors/polkadot-sdk/substrate/frame/staking", default-features = false }
pallet-staking-runtime-api = { path = "vendors/polkadot-sdk/substrate/frame/staking/runtime-api", default-features = false }
pallet-sudo = { path = "vendors/polkadot-sdk/substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "vendors/polkadot-sdk/substrate/frame/timestamp", default-features = false }
pallet-transaction-payment = { path = "vendors/polkadot-sdk/substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc = { path = "vendors/polkadot-sdk/substrate/frame/transaction-payment/rpc", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "vendors/polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
pallet-treasury = { path = "vendors/polkadot-sdk/substrate/frame/treasury", default-features = false }
pallet-utility = { path = "vendors/polkadot-sdk/substrate/frame/utility", default-features = false }
pallet-vesting = { path = "vendors/polkadot-sdk/substrate/frame/vesting", default-features = false }
pallet-proxy = { path = "vendors/polkadot-sdk/substrate/frame/proxy", default-features = false }
pallet-safe-mode = { path = "vendors/polkadot-sdk/substrate/frame/safe-mode", default-features = false }
pallet-tx-pause = { path = "vendors/polkadot-sdk/substrate/frame/tx-pause", default-features = false }

sc-basic-authorship = { path = "vendors/polkadot-sdk/substrate/client/basic-authorship" }
sc-block-builder = { path = "vendors/polkadot-sdk/substrate/client/block-builder" }
sc-chain-spec = { path = "vendors/polkadot-sdk/substrate/client/chain-spec" }
sc-cli = { path = "vendors/polkadot-sdk/substrate/client/cli", default-features = false }
sc-client-db = { path = "vendors/polkadot-sdk/substrate/client/db", default-features = false }
sc-client-api = { path = "vendors/polkadot-sdk/substrate/client/api" }
sc-consensus = { path = "vendors/polkadot-sdk/substrate/client/consensus/common" }
sc-consensus-aura = { path = "vendors/polkadot-sdk/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "vendors/polkadot-sdk/substrate/client/consensus/slots" }
sc-executor = { path = "vendors/polkadot-sdk/substrate/client/executor" }
sc-keystore = { path = "vendors/polkadot-sdk/substrate/client/keystore" }
sc-network = { path = "vendors/polkadot-sdk/substrate/client/network" }
sc-network-common = { path = "vendors/polkadot-sdk/substrate/client/network/common" }
sc-network-light = { path = "vendors/polkadot-sdk/substrate/client/network/light" }
sc-network-transactions = { path = "vendors/polkadot-sdk/substrate/client/network/transactions" }
sc-network-sync = { path = "vendors/polkadot-sdk/substrate/client/network/sync" }
sc-rpc = { path = "vendors/polkadot-sdk/substrate/client/rpc" }
sc-rpc-api = { path = "vendors/polkadot-sdk/substrate/client/rpc-api" }
sc-service = { path = "vendors/polkadot-sdk/substrate/client/service", default-features = false }
sc-telemetry = { path = "vendors/polkadot-sdk/substrate/client/telemetry" }
sc-transaction-pool = { path = "vendors/polkadot-sdk/substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "vendors/polkadot-sdk/substrate/client/transaction-pool/api" }
sc-utils = { path = "vendors/polkadot-sdk/substrate/client/utils" }

sp-api = { path = "vendors/polkadot-sdk/substrate/primitives/api", default-features = false }
sp-application-crypto = { path = "vendors/polkadot-sdk/substrate/primitives/application-crypto", default-features = false }
sp-arithmetic = { path = "vendors/polkadot-sdk/substrate/primitives/arithmetic", default-features = false }
sp-blockchain = { path = "vendors/polkadot-sdk/substrate/primitives/blockchain", default-features = false }
sp-block-builder = { path = "vendors/polkadot-sdk/substrate/primitives/block-builder", default-features = false }
sp-consensus = { path = "vendors/polkadot-sdk/substrate/primitives/consensus/common", default-features = false }
sp-consensus-aura = { path = "vendors/polkadot-sdk/substrate/primitives/consensus/aura", default-features = false }
sp-consensus-slots = { path = "vendors/polkadot-sdk/substrate/primitives/consensus/slots", default-features = false }
sp-core = { path = "vendors/polkadot-sdk/substrate/primitives/core", default-features = false }
sp-crypto-hashing = { path = "vendors/polkadot-sdk/substrate/primitives/crypto/hashing", default-features = false }
sp-database = { path = "vendors/polkadot-sdk/substrate/primitives/database" }
sp-externalities = { path = "vendors/polkadot-sdk/substrate/primitives/externalities", default-features = false }
sp-genesis-builder = { path = "vendors/polkadot-sdk/substrate/primitives/genesis-builder", default-features = false }
sp-inherents = { path = "vendors/polkadot-sdk/substrate/primitives/inherents", default-features = false }
sp-io = { path = "vendors/polkadot-sdk/substrate/primitives/io", default-features = false }
sp-keyring = { path = "vendors/polkadot-sdk/substrate/primitives/keyring", default-features = false }
sp-keystore = { path = "vendors/polkadot-sdk/substrate/primitives/keystore", default-features = false }
sp-offchain = { path = "vendors/polkadot-sdk/substrate/primitives/offchain", default-features = false }
sp-runtime = { path = "vendors/polkadot-sdk/substrate/primitives/runtime", default-features = false }
sp-runtime-interface = { path = "vendors/polkadot-sdk/substrate/primitives/runtime-interface", default-features = false }
sp-session = { path = "vendors/polkadot-sdk/substrate/primitives/session", default-features = false }
sp-staking = { path = "vendors/polkadot-sdk/substrate/primitives/staking", default-features = false }
sp-state-machine = { path = "vendors/polkadot-sdk/substrate/primitives/state-machine", default-features = false }
sp-std = { path = "vendors/polkadot-sdk/substrate/primitives/std", default-features = false }
sp-storage = { path = "vendors/polkadot-sdk/substrate/primitives/storage", default-features = false }
sp-timestamp = { path = "vendors/polkadot-sdk/substrate/primitives/timestamp", default-features = false }
sp-transaction-pool = { path = "vendors/polkadot-sdk/substrate/primitives/transaction-pool", default-features = false }
sp-trie = { path = "vendors/polkadot-sdk/substrate/primitives/trie", default-features = false }
sp-version = { path = "vendors/polkadot-sdk/substrate/primitives/version", default-features = false }
sp-weights = { path = "vendors/polkadot-sdk/substrate/primitives/weights", default-features = false }

substrate-build-script-utils = { path = "vendors/polkadot-sdk/substrate/utils/build-script-utils" }
substrate-frame-rpc-system = { path = "vendors/polkadot-sdk/substrate/utils/frame/rpc/system" }
substrate-prometheus-endpoint = { path = "vendors/polkadot-sdk/substrate/utils/prometheus" }
substrate-test-runtime-client = { path = "vendors/polkadot-sdk/substrate/test-utils/runtime/client" }
substrate-test-runtime = { path = "vendors/polkadot-sdk/substrate/test-utils/runtime" }
substrate-test-client = { path = "vendors/polkadot-sdk/substrate/test-utils/client" }
substrate-wasm-builder = { path = "vendors/polkadot-sdk/substrate/utils/wasm-builder" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "vendors/polkadot-sdk/substrate/utils/prometheus" }

try-runtime-cli = { path = "vendors/polkadot-sdk/substrate/utils/frame/try-runtime/cli" }

# Local crates
primitives = { path = "primitives", default-features = false }
client-runtime-api = { path = "bin/client-runtime-api", default-features = false }
selendra-runtime = { path = "bin/runtime" }

pallet-aleph = { path = "pallets/aleph", default-features = false }
pallet-aleph-runtime-api = { path = "pallets/aleph-runtime-api", default-features = false }
pallet-committee-management = { path = "pallets/committee-management", default-features = false }
pallet-elections = { path = "pallets/elections", default-features = false }
pallet-operations = { path = "pallets/operations", default-features = false }
pallet-xvm = { path = "pallets/xvm", default-features = false }
pallet-ethereum-checked = { path = "pallets/ethereum-checked", default-features = false }
pallet-dynamic-evm-base-fee = { path = "pallets/dynamic-evm-base-fee", default-features = false }
pallet-unified-accounts = { path = "pallets/unified-accounts", default-features = false }

finality-aleph = { path = "crate/finality-aleph" }
network-clique = { path = "crate/clique" }
rate-limiter = { path = "crate/rate-limiter" }

# # frontier Client
# fc-api = { path = "crate/frontier/client/api", default-features = false }
# fc-cli = { path = "crate/frontierclient/cli", default-features = false }
# fc-consensus = { path = "crate/frontierclient/consensus", default-features = false }
# fc-db = { path = "crate/frontierclient/db", default-features = false }
# fc-mapping-sync = {path = "crate/frontierclient/mapping-sync", default-features = false }
# fc-rpc = { path = "crate/frontierclient/rpc", default-features = false }
# fc-rpc-core = { path = "crate/frontierclient/rpc-core", default-features = false }
# fc-storage = {path = "crate/frontierclient/storage", default-features = false }

# # frontier Primitive
# fp-account = { path = "crate/frontierprimitives/account", default-features = false }
# fp-consensus = { path = "crate/frontierprimitives/consensus", default-features = false }
# fp-dynamic-fee = { path = "crate/frontierprimitives/dynamic-fee", default-features = false }
# fp-ethereum = { path = "crate/frontierprimitives/ethereum", default-features = false }
# fp-evm = { path = "crate/frontierprimitives/evm", default-features = false }
# fp-rpc = { path = "crate/frontierprimitives/rpc", default-features = false }
# fp-self-contained = {path = "crate/frontierprimitives/self-contained", default-features = false }
# fp-storage = { path = "crate/frontierprimitives/storage", default-features = false }

# # frontier FRAME
# pallet-base-fee = { path = "crate/frontierframe/base-fee", default-features = false }
# pallet-dynamic-fee = { path = "crate/frontierframe/dynamic-fee", default-features = false }
# pallet-ethereum = { path = "crate/frontierframe/ethereum", default-features = false }
# pallet-evm = { path = "crate/frontierframe/evm", default-features = false }
# pallet-evm-chain-id = { path = "crate/frontierframe/evm-chain-id", default-features = false }
# pallet-evm-precompile-modexp = { path = "crate/frontierframe/evm/precompile/modexp", default-features = false }
# pallet-evm-precompile-sha3fips = { path = "crate/frontierframe/evm/precompile/sha3fips", default-features = false }
# pallet-evm-precompile-simple = { path = "crate/frontierframe/evm/precompile/simple", default-features = false }
# pallet-hotfix-sufficients = { path = "crate/frontierframe/hotfix-sufficients", default-features = false }

# # local frontier
# pallet-custom-signatures = { path = "pallets/custom-signatures", default-features = false }
# pallet-unified-accounts = { path = "pallets/unified-accounts", default-features = false }
# pallet-dynamic-evm-base-fee = { path = "pallets/dynamic-evm-base-fee", default-features = false }

# # utils
# precompile-utils = { path = "crate/frontierprecompiles", default-features = false }

# frontier Client
fc-api = { path = "crate/frontier/client/api" }
fc-cli = { path = "crate/frontier/client/cli", default-features = false }
fc-consensus = { path = "crate/frontier/client/consensus" }
fc-db = { path = "crate/frontier/client/db", default-features = false }
fc-mapping-sync = { path = "crate/frontier/client/mapping-sync", default-features = false }
fc-rpc = { path = "crate/frontier/client/rpc", default-features = false }
fc-rpc-core = { path = "crate/frontier/client/rpc-core" }
fc-rpc-v2 = { path = "crate/frontier/client/rpc-v2" }
fc-rpc-v2-api = { path = "crate/frontier/client/rpc-v2/api" }
fc-rpc-v2-types = { path = "crate/frontier/client/rpc-v2/types" }
fc-storage = { path = "crate/frontier/client/storage" }
# frontier Primitive
fp-account = { path = "crate/frontier/primitives/account", default-features = false }
fp-consensus = { path = "crate/frontier/primitives/consensus", default-features = false }
fp-dynamic-fee = { path = "crate/frontier/primitives/dynamic-fee", default-features = false }
fp-ethereum = { path = "crate/frontier/primitives/ethereum", default-features = false }
fp-evm = { path = "crate/frontier/primitives/evm", default-features = false }
fp-rpc = { path = "crate/frontier/primitives/rpc", default-features = false }
fp-self-contained = { path = "crate/frontier/primitives/self-contained", default-features = false }
fp-storage = { path = "crate/frontier/primitives/storage", default-features = false }
# frontier FRAME
pallet-base-fee = { path = "crate/frontier/frame/base-fee", default-features = false }
pallet-dynamic-fee = { path = "crate/frontier/frame/dynamic-fee", default-features = false }
pallet-ethereum = { path = "crate/frontier/frame/ethereum", default-features = false }
pallet-evm = { path = "crate/frontier/frame/evm", default-features = false }
pallet-evm-chain-id = { path = "crate/frontier/frame/evm-chain-id", default-features = false }
pallet-evm-precompile-modexp = { path = "crate/frontier/frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-sha3fips = { path = "crate/frontier/frame/evm/precompile/sha3fips", default-features = false }
pallet-evm-precompile-simple = { path = "crate/frontier/frame/evm/precompile/simple", default-features = false }
pallet-evm-test-vector-support = { path = "crate/frontier/frame/evm/test-vector-support" }
pallet-hotfix-sufficients = { path = "crate/frontier/frame/hotfix-sufficients", default-features = false }
# frontier Utility
precompile-utils = { path = "crate/frontier/precompiles", default-features = false }