[package]
name = "selendra-inspect"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
log = "0.4.17"
derive_more = "0.99"
clap = { version = "3.1.6", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }

sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

