[package]
name = "node-cli"
version = "1.0.1"
edition = "2021"
default-run = "selendra"
build = "build.rs"


[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "selendra"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
array-bytes = { workspace = true}
clap = { workspace = true, features = ["derive"], optional = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server"] }
futures = { workspace = true}
log = { workspace = true}
serde_json = { workspace = true}
rand = { workspace = true}

# primitives
sp-authority-discovery = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-grandpa = {  workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true }
sp-consensus = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-io = { workspace = true }
sp-blockchain = { workspace = true }
sp-statement-store = { workspace = true }
sp-offchain = { workspace = true }

# client dependencies
sc-client-api = { workspace = true }
sc-chain-spec = { workspace = true }
sc-consensus = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-statement-store = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-network-statement = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-executor = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-sysinfo = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-offchain = { workspace = true }

# starknet
mp-block = { workspace = true }
mp-digest-log = { workspace = true }
mp-felt = { workspace = true }
mp-sequencer-address = { workspace = true, features = ["client"] }

mc-db = { workspace = true }
mc-mapping-sync = { workspace = true }
mc-genesis-data-provider = { workspace = true }
mc-storage = { workspace = true }
mc-rpc = { workspace = true }

blockifier = { workspace = true }

# frame dependencies
frame-system = { workspace = true }
frame-benchmarking = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }

pallet-starknet = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-im-online = { workspace = true }

# CLI-specific dependencies
sc-cli = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
node-inspect = { workspace = true, optional = true }
try-runtime-cli = { workspace = true, optional = true }

# node-specific dependencies
selendra-runtime = { workspace = true }
selendra-runtime-constants = { workspace = true }
selendra-rpc = { workspace = true }
selendra-primitives = { workspace = true }


[dev-dependencies]
tokio = { version = "1.22.0", features = ["macros", "time", "parking_lot"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
nix = { version = "0.26.1", features = ["signal"] }
futures = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
platforms = { workspace = true }
soketto = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
wait-timeout = { workspace = true }

sc-keystore = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-epochs = { workspace = true }
sc-service-test = { workspace = true }
sc-block-builder = { workspace = true }
sp-tracing = { workspace = true }
sp-blockchain = { workspace = true }

substrate-rpc-client = { workspace = true }
pallet-timestamp = { workspace = true }
substrate-cli-test-utils = { workspace = true }

[build-dependencies]
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }

pallet-balances = { workspace = true }
sc-cli = { workspace = true, optional = true }
sc-storage-monitor = { workspace = true }
substrate-frame-cli = { workspace = true, optional = true }
try-runtime-cli = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }
substrate-build-script-utils = { workspace = true, optional = true }

[features]
default = ["cli"]
cli = [
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/rocksdb",
	"clap",
	"clap_complete",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"selendra-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks"
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["selendra-runtime/try-runtime", "try-runtime-cli/try-runtime"]

# [[bench]]
# name = "transaction_pool"
# harness = false

# [[bench]]
# name = "block_production"
# harness = false