[package]
name = "selendra-primitives"
version = "1.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
fp-account = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
    "fp-account/std",
	"frame-support/std",
	"frame-system/std"
]