[package]
name = "selendra-primitives"
version = "1.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
sp-runtime = { workspace = true }
fp-account = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
    "fp-account/std",
	"frame-support/std",
	"frame-system/std"
]
short_session = []